--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build": "ember build",
     "start": "ember server",
     "test": "ember try:each",
-    "flow": "flow"
+    "flow": "flow",
+    "prepublishOnly": "ember ts:precompile",
+    "postpublish": "ember ts:clean"
   },
   "bugs": "https://github.com/poteto/ember-changeset/issues",
   "homepage": "https://github.com/poteto/ember-changeset",
@@ -26,6 +28,11 @@
     "ember-deep-set": "poteto/ember-deep-set#dee1243027d7f47ffa4a28709baf4c4874fd5317"
   },
   "devDependencies": {
+    "@types/ember": "^2.8.13",
+    "@types/ember-data": "^2.14.9",
+    "@types/ember-test-helpers": "^0.7.1",
+    "@types/ember-testing-helpers": "^0.0.3",
+    "@types/rsvp": "^4.0.1",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.16.2",
@@ -38,6 +45,7 @@
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-typescript": "^1.1.3",
     "ember-cli-uglify": "^2.0.0",
     "ember-data": "^2.17.0",
     "ember-disable-prototype-extensions": "^1.1.2",
@@ -50,7 +58,8 @@
     "ember-source": "~2.16.0",
     "flow-bin": "^0.61.0",
     "flow-typed": "^2.2.3",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "typescript": "^2.7.2"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
